Modifications in the 0.4.1 release candidate 1(28 July 2011)

Interface change:
 * tensor.grad(cost, wrt) will return an object of the "same type" of wrt.
   If wrt is a tensor variable, list or tuple, it will return the same thing.
   This is an interface change outside the normal release number scheme. We need
   this for pylearn2 and waiting for a futur release is not a good solution.

Deprecation (will be removed in Theano 0.5):

 * The string mode (accepted only by theano.function()) FAST_RUN_NOGC. Use Mode(linker='c|py_nogc') instead.
 * The string mode (accepted only by theano.function()) STABILIZE. Use Mode(optimizer='stabilize') instead.
 * scan interface change:
   * The use of `return_steps` for specifying how many entries of the output
     scan has been depricated
     * The same thing can be done by applying a subtensor on the output
       return by scan to select a certain slice
  * The inner function (that scan receives) should return its outputs and
    updates following this order:
      [outputs], [updates], [condition]. One can skip any of the three if not
      used, but the order has to stay unchanged.

Decrecated in 0.4.0:
 * tag.shape attribute deprecated (#633)
 * CudaNdarray_new_null is deprecated in favour of CudaNdarray_New
 * Dividing integers with / is deprecated: use // for integer division, or
   cast one of the integers to a float type if you want a float result (you may
   also change this behavior with config.int_division).

New features:

 * `R_op <http://deeplearning.net/software/theano/tutorial/gradients.html>`_ macro like theano.tensor.grad
   * Not all tests are done yet (TODO)
 * Added alias theano.tensor.bitwise_{and,or,xor,not}. They are the numpy names.
 * Updates returned by Scan (you need to pass them to the theano.function) are now a new Updates class.
   That allow more check and easier work with them. The Updates class is a subclass of dict
 * Scan can now work in a "do while" loop style.